[package]
name = "rust-helloworld"
version = "0.1.0"
edition = "2021"
authors = ["You <you@example.com>"]
license = "MIT"
homepage = "https://fernsim.example.com/"
repository = "https://gitlair.com/sporeador/fern_sim"
documentation = "http://fernsim.example.com/docs"
description = """
Fern simulation, from the cellular level up.
"""

[workspace]
members = ["garden"]



[dependencies]
actix-web = "4.1"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]

[profile.release]
debug = true  # 在release构建中启用debug符号

[profile.test]
