[package]
name = "garden"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
crates-io = "0.40.4"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
num = "0.4.3"
num-complex = "0.4.6"
log = "0.4.22"
regex = "1.10.6"
lazy_static = "1.5.0"
unicode-normalization = "0.1.24"
serde_json = "1.0.128"
reqwest = "0.12.7"
thiserror = "1.0.64"
anyhow = "1.0.89"
